# DiReBM

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
direbm/: __init__.py  constants.py  fields.py  lattices.py  lbm.py  physics.py
direbm/reference/: __init__.py  boundary.py  grid.py  simulator.py  types.py
direbm/warp/: __init__.py  lbm.py  physics.py  propagation.py  simulator.py
docs/: ARCHITECTURE.md
docs/decisions/: 0001-stack-warp.md  0002-3d-icosahedral.md
docs/results/: exp_alpha_robust.md  exp_circular_wave.md  exp_convergence.md  exp_gpu_bench.md  exp_gpu_locality.md  exp_gpu_vs_v1.md  exp_lbm_vs_drbm.md  exp_numerical_viscosity.md  exp_obstacle.md  exp_rest_state.md  exp_shear_3d.md  exp_soft_outer.md  exp_sphere.md  exp_taylor_green.md
experiments/: exp_alpha_robust.py  exp_circular_wave.py  exp_convergence.py  exp_gpu_bench.py  exp_gpu_locality.py  exp_gpu_vs_v1.py  exp_lbm_vs_drbm.py  exp_numerical_viscosity.py  exp_obstacle.py  exp_rest_state.py  exp_shear_3d.py  exp_soft_outer.py  exp_sphere.py  exp_taylor_green.py
research/: idea.md  progress.md
scripts/: tags.ps1
tests/: test_boundary.py  test_boundary_3d.py  test_fields.py  test_lattices_3d.py  test_lbm.py  test_physics.py  test_reference.py  test_reference_3d.py  test_smoke.py  test_warp_lbm.py  test_warp_physics.py  test_warp_propagation.py  test_warp_simulator.py
